--- a/MAUIAPP/BarHub/Pages/GlobalComponents/TopAppBar.xaml
+++ b/MAUIAPP/BarHub/Pages/GlobalComponents/TopAppBar.xaml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Name="this"
-             x:Class="BarHub.Pages.TopAppBar">
+<ContentView
+    x:Class="BarHub.Pages.TopAppBar"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Name="this">
 
-    <Border Margin="-10,-10,-10,0"  Padding="20,30,20,20">
-        <Grid ColumnDefinitions="*"
-        HorizontalOptions="Fill"
-        VerticalOptions="Fill">
+    <Border Margin="-10,-10,-10,0" Padding="20,30,20,20">
+        <Grid HorizontalOptions="Fill" VerticalOptions="Fill">
 
-            <ContentView Content="{Binding IconTemplate, Source={x:Reference this}}" Grid.Column="0" HorizontalOptions="Start"/>
+            <ContentView
+                Grid.Column="0"
+                Content="{Binding IconTemplate, Source={x:Reference this}}"
+                HorizontalOptions="Start" VerticalOptions="Center" />
 
 
-            <Label Grid.Column="0"
-            Text="{Binding PageTitle, Source={x:Reference this}}"
-            TextColor="Black"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center"
-            FontAttributes="Bold" 
-            FontSize="20" />
+            <Label
+                Grid.Column="0"
+                FontAttributes="Bold"
+                FontSize="20"
+                HorizontalOptions="Center"
+                Text="{Binding PageTitle, Source={x:Reference this}}"
+                TextColor="Black"
+                VerticalOptions="Center" />
         </Grid>
     </Border>
 </ContentView>
