--- a/MAUIAPP/BarHub/Pages/Propietario/CardSection.xaml
+++ b/MAUIAPP/BarHub/Pages/Propietario/CardSection.xaml
@@ -3,24 +3,51 @@
     x:Class="BarHub.Pages.Propietario.CardSection"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
     xmlns:touchEffects="clr-namespace:Maui.FreakyEffects.TouchEffects;assembly=Maui.FreakyEffects"
     xmlns:viewModels="clr-namespace:BarHub.ViewModel.Admin"
     xmlns:viewmodel="clr-namespace:BarHub.ViewModel.Owner"
     x:Name="this"
     x:DataType="viewmodel:SectionViewModel">
-    <HorizontalStackLayout
-        Padding="20"
+    <Grid
+        Padding="20,0,0,0"
         touchEffects:TouchEffect.Color="{AppThemeBinding Light={StaticResource RippleDark},
                                                          Dark={StaticResource RippleLight}}"
-        HorizontalOptions="Fill"
-        Spacing="10">
-        <Image Source="{Binding Image}" WidthRequest="30" />
+        ColumnDefinitions="Auto,*,Auto"
+        ColumnSpacing="10"
+        HorizontalOptions="Fill">
+        <Image
+            Grid.Column="0"
+            Source="{Binding Image}"
+            WidthRequest="30" />
         <Label
+            x:Name="name"
+            Grid.Column="1"
             FontAttributes="Bold"
             Text="{Binding Name}"
             VerticalOptions="Center" />
-        <HorizontalStackLayout.GestureRecognizers>
-            <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
-        </HorizontalStackLayout.GestureRecognizers>
-    </HorizontalStackLayout>
+
+        <VerticalStackLayout
+            Grid.Column="2"
+            Padding="40,20"
+            touchEffects:TouchEffect.Color="{AppThemeBinding Light={StaticResource RippleDark},
+                                                             Dark={StaticResource RippleLight}}"
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill">
+            <Image
+                HorizontalOptions="Center"
+                Source="{FontImageSource FontFamily=FASolid,
+                                         Glyph={x:Static fa:Solid.Pen},
+                                         Color={StaticResource Muted}}"
+                VerticalOptions="Center"
+                WidthRequest="15" />
+
+            <VerticalStackLayout.GestureRecognizers>
+                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+            </VerticalStackLayout.GestureRecognizers>
+        </VerticalStackLayout>
+        <Grid.GestureRecognizers>
+            <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_1" />
+        </Grid.GestureRecognizers>
+    </Grid>
 </ContentView>
