--- a/MAUIAPP/BarHub/Resources/Styles/Colors.xaml
+++ b/MAUIAPP/BarHub/Resources/Styles/Colors.xaml
@@ -11,6 +11,69 @@
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
 
+    <Color x:Key="Surface">#FFFFFF</Color>
+    <Color x:Key="SurfaceDark">#1C1B1F</Color>
+
+    <Color x:Key="SurfaceVariant">#E7E0EC</Color>
+    <Color x:Key="SurfaceVariantDark">#49454F</Color>
+
+    <Color x:Key="Background">#FFFBFE</Color>
+    <Color x:Key="BackgroundDark">#1C1B1F</Color>
+
+    <Color x:Key="Error">#B3261E</Color>
+    <Color x:Key="ErrorDark">#F2B8B5</Color>
+    <Color x:Key="ErrorContainer">#F9DEDC</Color>
+    <Color x:Key="ErrorContainerDark">#8C1D18</Color>
+
+    <Color x:Key="OnPrimary">#FFFFFF</Color>
+    <Color x:Key="OnPrimaryDark">#371E73</Color>
+    <Color x:Key="OnPrimaryContainer">#21005E</Color>
+    <Color x:Key="OnPrimaryContainerDark">#EADDFF</Color>
+
+    <Color x:Key="OnSecondary">#FFFFFF</Color>
+    <Color x:Key="OnSecondaryDark">#332D41</Color>
+    <Color x:Key="OnSecondaryContainer">#1E192B</Color>
+    <Color x:Key="OnSecondaryContainerDark">#E8DEF8</Color>
+
+    <Color x:Key="OnTertiary">#FFFFFF</Color>
+    <Color x:Key="OnTertiaryDark">#492532</Color>
+    <Color x:Key="OnTertiaryContainer">#370B1E</Color>
+    <Color x:Key="OnTertiaryContainerDark">#FFD8E4</Color>
+
+    <Color x:Key="OnSurface">#1C1B1F</Color>
+    <Color x:Key="OnSurfaceDark">#E6E1E5</Color>
+
+    <Color x:Key="OnSurfaceVariant">#49454E</Color>
+    <Color x:Key="OnSurfaceVariantDark">#CAC4D0</Color>
+
+    <Color x:Key="OnError">#FFFFFF</Color>
+    <Color x:Key="OnErrorDark">#601410</Color>
+    <Color x:Key="OnErrorContainer">#370B1E</Color>
+    <Color x:Key="OnErrorContainerDark">#F9DEDC</Color>
+
+    <Color x:Key="OnBackground">#1C1B1F</Color>
+    <Color x:Key="OnBackgroundDark">#E6E1E5</Color>
+
+    <Color x:Key="Outline">#79747E</Color>
+    <Color x:Key="OutlineDark">#938F99</Color>
+
+    <Color x:Key="OutlineVariant">#C4C7C5</Color>
+    <Color x:Key="OutlineVariantDark">#444746</Color>
+
+    <Color x:Key="Shadow">#000000</Color>
+    <Color x:Key="ShadowDark">#000000</Color>
+
+    <Color x:Key="SurfaceTint">#6750A4</Color>
+    <Color x:Key="SurfaceTintDark">#D0BCFF</Color>
+
+    <Color x:Key="InverseSurface">#313033</Color>
+    <Color x:Key="InverseSurfaceDark">#E6E1E5</Color>
+    <Color x:Key="InverseOnSurface">#F4EFF4</Color>
+    <Color x:Key="InverseOnSurfaceDark">#313033</Color>
+
+    <Color x:Key="InversePrimary">#D0BCFF</Color>
+    <Color x:Key="InversePrimaryDark">#6750A4</Color>
+
     <Color x:Key="Muted">#9E9E9E</Color>
     <Color x:Key="RippleLight">#40FFFFFF</Color>
     <Color x:Key="RippleDark">#40000000</Color>
@@ -46,7 +109,7 @@
     <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}" />
 
 
-    <SolidColorBrush x:Key="Background">
+    <SolidColorBrush x:Key="MainBackground">
         <SolidColorBrush.Color>
             <AppThemeBinding Dark="{StaticResource Black}" Light="{StaticResource White}" />
         </SolidColorBrush.Color>
